<resources>
    <string name="app_name">Stardust</string>
    <string name="login_app_name">STARDUST</string>
    <string name="title_home">Home</string>
    <string name="title_note">Note</string>
    <string name="title_User">User</string>
    <string name="title_article">Article</string>
    <string name="title_metor">Meteor</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="username_rule">用户名应为6-20位的字母、数字、下划线、中文组合，且以字母或中文作为第一个字符。</string>
    <string name="password_rule">密码应为6-20位的字母、数字、常见符号组合，不允许出现空格和特殊符号。</string>
    <string name="note_save">保存</string>
    <string name="note_share">分享</string>
    <string name="note_cancel_share">取消分享</string>
    <string name="note_delete">删除</string>
    <string name="note_image_share">长图片分享</string>

    <string-array name="month">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>



</resources>
