<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:textColor="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@mipmap/home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_article"
        android:icon="@mipmap/article"
        android:title="@string/title_article" />

    <item
        android:id="@+id/navigation_addtion"
        android:icon="@mipmap/new_note"
        android:title="@string/title_note" />

    <item
        android:id="@+id/navigation_metor"
        android:icon="@mipmap/meteor"
        android:title="@string/title_metor" />

    <item
        android:id="@+id/navigation_user"
        android:icon="@mipmap/user"
        android:title="@string/title_User" />

</menu>
